--- a/scaper.ipynb
+++ b/scaper.ipynb
@@ -30,22 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\r\\n  \"data\": [\\r\\n    {\\r\\n      \"caseParties\": [],\\r\\n      \"caseAttornies\": [],\\r\\n      \"caseEvents\": [],\\r\\n      \"caseHearings\": [],\\r\\n      \"caseOtherDocuments\": [],\\r\\n      \"caseCharges\": [],\\r\\n      \"caseFinancials\": [],\\r\\n      \"caseFinancialTransactions\": [],\\r\\n      \"caseArrestInfomation\": [],\\r\\n      \"casePartyDemographics\": {\\r\\n        \"race\": null,\\r\\n        \"sex\": null,\\r\\n        \"dateOfBirth\": null,\\r\\n        \"height\": null,\\r\\n        \"weight\": null,\\r\\n        \"hairColor\": null,\\r\\n        \"eyeColor\": null\\r\\n      },\\r\\n      \"casePartyAddress\": {\\r\\n        \"streetName\": null,\\r\\n        \"city\": null,\\r\\n        \"state\": null,\\r\\n        \"zip\": null\\r\\n      },\\r\\n      \"casePartyIdentification\": [],\\r\\n      \"caseDocuments\": [],\\r\\n      \"minuteOrders\": [],\\r\\n      \"caseFlags\": [],\\r\\n      \"partyInJailFlags\": [],\\r\\n      \"caseBonds\": [],\\r\\n      \"caseWarrants\": [],\\r\\n      \"caseCrossReferenceNumbers\": [],\\r\\n      \"relatedCases\": [],\\r\\n      \"id\": \"5182620\",\\r\\n      \"caseNumber\": \"23FL004200\",\\r\\n      \"style\": \"Mina Rahimi vs Faraz Mirzaei\",\\r\\n      \"caseCategory\": 2,\\r\\n      \"type\": \"Dissolution w/o Minor Children\",\\r\\n      \"typeId\": \"FL40\",\\r\\n      \"fileDate\": \"12/20/2023\",\\r\\n      \"securityGroup\": null,\\r\\n      \"status\": \"Active\",\\r\\n      \"courtLocation\": \"Family\",\\r\\n      \"caseSubType\": null,\\r\\n      \"nodeId\": 21328,\\r\\n      \"permission\": 0,\\r\\n      \"isSecuredAccess\": false,\\r\\n      \"isCriminal\": false\\r\\n    }\\r\\n  ],\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T18:46:16.5192505Z\",\\r\\n  \"message\": \"Case number 23FL004200 was found\"\\r\\n}'"
+       "'{\\r\\n  \"data\": [\\r\\n    {\\r\\n      \"caseParties\": [],\\r\\n      \"caseAttornies\": [],\\r\\n      \"caseEvents\": [],\\r\\n      \"caseHearings\": [],\\r\\n      \"caseOtherDocuments\": [],\\r\\n      \"caseCharges\": [],\\r\\n      \"caseFinancials\": [],\\r\\n      \"caseFinancialTransactions\": [],\\r\\n      \"caseArrestInfomation\": [],\\r\\n      \"casePartyDemographics\": {\\r\\n        \"race\": null,\\r\\n        \"sex\": null,\\r\\n        \"dateOfBirth\": null,\\r\\n        \"height\": null,\\r\\n        \"weight\": null,\\r\\n        \"hairColor\": null,\\r\\n        \"eyeColor\": null\\r\\n      },\\r\\n      \"casePartyAddress\": {\\r\\n        \"streetName\": null,\\r\\n        \"city\": null,\\r\\n        \"state\": null,\\r\\n        \"zip\": null\\r\\n      },\\r\\n      \"casePartyIdentification\": [],\\r\\n      \"caseDocuments\": [],\\r\\n      \"minuteOrders\": [],\\r\\n      \"caseFlags\": [],\\r\\n      \"partyInJailFlags\": [],\\r\\n      \"caseBonds\": [],\\r\\n      \"caseWarrants\": [],\\r\\n      \"caseCrossReferenceNumbers\": [],\\r\\n      \"relatedCases\": [],\\r\\n      \"id\": \"5218884\",\\r\\n      \"caseNumber\": \"23FL004253\",\\r\\n      \"style\": \"Lisa  Tam vs Julio  Colucci\",\\r\\n      \"caseCategory\": 2,\\r\\n      \"type\": \"Other Family Law Petitions and Complaints\",\\r\\n      \"typeId\": \"FL130\",\\r\\n      \"fileDate\": \"12/20/2023\",\\r\\n      \"securityGroup\": null,\\r\\n      \"status\": \"Active\",\\r\\n      \"courtLocation\": \"Family\",\\r\\n      \"caseSubType\": null,\\r\\n      \"nodeId\": 21328,\\r\\n      \"permission\": 0,\\r\\n      \"isSecuredAccess\": false,\\r\\n      \"isCriminal\": false\\r\\n    }\\r\\n  ],\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T18:49:41.032813Z\",\\r\\n  \"message\": \"Case number 23FL004253 was found\"\\r\\n}'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validate_case_number(4200)"
+    "validate_case_number(4253)"
    ]
   },
   {
@@ -53,7 +53,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "FL_MAX = 4253"
+   ]
   }
  ],
  "metadata": {
