Parameterized includes case_type

--- a/scaper.ipynb
+++ b/scaper.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "def validate_case_number(case_number: int):\n",
+    "def validate_case_number(case_number: int, case_type: str):\n",
+    "    assert case_type in set([\"DV\",\"FL\"])\n",
     "    formatted_number = '{:06d}'.format(case_number)\n",
     "    headers = {\n",
     "        'Accept': 'application/json, text/plain, */*',\n",
@@ -23,7 +24,7 @@
     "        'Connection': 'keep-alive',\n",
     "    }\n",
     "\n",
-    "    response = requests.get(f'https://traffic.scscourt.org/api/case/validate/23FL{formatted_number}', headers=headers)\n",
+    "    response = requests.get(f'https://traffic.scscourt.org/api/case/validate/23{case_type}{formatted_number}', headers=headers)\n",
     "\n",
     "    return response.text\n"
    ]
@@ -45,7 +46,7 @@
     }
    ],
    "source": [
-    "validate_case_number(4253)"
+    "validate_case_number(4253,\"FL\")"
    ]
   },
   {
