--- a/scaper.ipynb
+++ b/scaper.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,27 @@
     "\n",
     "    response = requests.get(f'https://traffic.scscourt.org/api/case/{formatted_number}', headers=headers)\n",
     "\n",
-    "    print(response.text)\n"
+    "    return (response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\\r\\n  \"data\": {\\r\\n    \"caseParties\": [\\r\\n      {\\r\\n        \"attorneys\": [],\\r\\n        \"casePartyId\": \"15148230\",\\r\\n        \"type\": \"Petitioner\",\\r\\n        \"firstName\": \"Lisa \",\\r\\n        \"middleName\": \"Wai Man\",\\r\\n        \"lastName\": \"Tam\",\\r\\n        \"nickName\": null,\\r\\n        \"businessName\": null,\\r\\n        \"fullName\": \"Lisa  Wai Man Tam\",\\r\\n        \"isDefendant\": false\\r\\n      },\\r\\n      {\\r\\n        \"attorneys\": [],\\r\\n        \"casePartyId\": \"15148231\",\\r\\n        \"type\": \"Respondent\",\\r\\n        \"firstName\": \"Julio \",\\r\\n        \"middleName\": \"Cesar\",\\r\\n        \"lastName\": \"Colucci\",\\r\\n        \"nickName\": null,\\r\\n        \"businessName\": null,\\r\\n        \"fullName\": \"Julio  Cesar Colucci\",\\r\\n        \"isDefendant\": true\\r\\n      }\\r\\n    ],\\r\\n    \"caseAttornies\": [],\\r\\n    \"caseEvents\": [\\r\\n      {\\r\\n        \"eventId\": \"119956824\",\\r\\n        \"date\": \"1/16/2024\",\\r\\n        \"type\": \"Order: Qualified Domestic Relations\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"QDRO re: Google, LLC 401(k)\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119956825\",\\r\\n        \"date\": \"1/16/2024\",\\r\\n        \"type\": \"Order: Qualified Domestic Relations\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"QDRO re: State street salary savings program\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923832\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"New Filed Case\",\\r\\n        \"filedBy\": \"\",\\r\\n        \"comment\": null,\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923850\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"Petition: Family Law Other (Fee Applies)\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"Register Foreign Judgment\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923852\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"Other\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"Notice of Registration of Foreign Judgment\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      }\\r\\n    ],\\r\\n    \"caseHearings\": [],\\r\\n    \"caseOtherDocuments\": [],\\r\\n    \"caseCharges\": [],\\r\\n    \"caseFinancials\": [],\\r\\n    \"caseFinancialTransactions\": [],\\r\\n    \"caseArrestInfomation\": [],\\r\\n    \"casePartyDemographics\": {\\r\\n      \"race\": null,\\r\\n      \"sex\": null,\\r\\n      \"dateOfBirth\": null,\\r\\n      \"height\": null,\\r\\n      \"weight\": null,\\r\\n      \"hairColor\": null,\\r\\n      \"eyeColor\": null\\r\\n    },\\r\\n    \"casePartyAddress\": {\\r\\n      \"streetName\": null,\\r\\n      \"city\": null,\\r\\n      \"state\": null,\\r\\n      \"zip\": null\\r\\n    },\\r\\n    \"casePartyIdentification\": [],\\r\\n    \"caseDocuments\": [],\\r\\n    \"minuteOrders\": [],\\r\\n    \"caseFlags\": [],\\r\\n    \"partyInJailFlags\": [],\\r\\n    \"caseBonds\": [],\\r\\n    \"caseWarrants\": [],\\r\\n    \"caseCrossReferenceNumbers\": [],\\r\\n    \"relatedCases\": [],\\r\\n    \"id\": \"5218884\",\\r\\n    \"caseNumber\": \"23FL004253\",\\r\\n    \"style\": \"Lisa  Tam vs Julio  Colucci\",\\r\\n    \"caseCategory\": 2,\\r\\n    \"type\": \"Other Family Law Petitions and Complaints\",\\r\\n    \"typeId\": \"FL130\",\\r\\n    \"fileDate\": \"12/20/2023\",\\r\\n    \"securityGroup\": null,\\r\\n    \"status\": \"Active\",\\r\\n    \"courtLocation\": \"Family\",\\r\\n    \"caseSubType\": null,\\r\\n    \"nodeId\": 21328,\\r\\n    \"permission\": 0,\\r\\n    \"isSecuredAccess\": false,\\r\\n    \"isCriminal\": false\\r\\n  },\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T18:53:12.9354588Z\",\\r\\n  \"message\": \"Case number 5218884 was found\"\\r\\n}'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_event_details(5218884)"
    ]
   },
   {
