--- a/scaper.ipynb
+++ b/scaper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,42 +61,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\r\\n  \"data\": {\\r\\n    \"caseParties\": [\\r\\n      {\\r\\n        \"attorneys\": [],\\r\\n        \"casePartyId\": \"15148230\",\\r\\n        \"type\": \"Petitioner\",\\r\\n        \"firstName\": \"Lisa \",\\r\\n        \"middleName\": \"Wai Man\",\\r\\n        \"lastName\": \"Tam\",\\r\\n        \"nickName\": null,\\r\\n        \"businessName\": null,\\r\\n        \"fullName\": \"Lisa  Wai Man Tam\",\\r\\n        \"isDefendant\": false\\r\\n      },\\r\\n      {\\r\\n        \"attorneys\": [],\\r\\n        \"casePartyId\": \"15148231\",\\r\\n        \"type\": \"Respondent\",\\r\\n        \"firstName\": \"Julio \",\\r\\n        \"middleName\": \"Cesar\",\\r\\n        \"lastName\": \"Colucci\",\\r\\n        \"nickName\": null,\\r\\n        \"businessName\": null,\\r\\n        \"fullName\": \"Julio  Cesar Colucci\",\\r\\n        \"isDefendant\": true\\r\\n      }\\r\\n    ],\\r\\n    \"caseAttornies\": [],\\r\\n    \"caseEvents\": [\\r\\n      {\\r\\n        \"eventId\": \"119956824\",\\r\\n        \"date\": \"1/16/2024\",\\r\\n        \"type\": \"Order: Qualified Domestic Relations\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"QDRO re: Google, LLC 401(k)\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119956825\",\\r\\n        \"date\": \"1/16/2024\",\\r\\n        \"type\": \"Order: Qualified Domestic Relations\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"QDRO re: State street salary savings program\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923832\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"New Filed Case\",\\r\\n        \"filedBy\": \"\",\\r\\n        \"comment\": null,\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923850\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"Petition: Family Law Other (Fee Applies)\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"Register Foreign Judgment\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      },\\r\\n      {\\r\\n        \"eventId\": \"119923852\",\\r\\n        \"date\": \"12/20/2023\",\\r\\n        \"type\": \"Other\",\\r\\n        \"filedBy\": \"Lisa  Tam, \",\\r\\n        \"comment\": \"Notice of Registration of Foreign Judgment\",\\r\\n        \"documentId\": \"\",\\r\\n        \"documents\": []\\r\\n      }\\r\\n    ],\\r\\n    \"caseHearings\": [],\\r\\n    \"caseOtherDocuments\": [],\\r\\n    \"caseCharges\": [],\\r\\n    \"caseFinancials\": [],\\r\\n    \"caseFinancialTransactions\": [],\\r\\n    \"caseArrestInfomation\": [],\\r\\n    \"casePartyDemographics\": {\\r\\n      \"race\": null,\\r\\n      \"sex\": null,\\r\\n      \"dateOfBirth\": null,\\r\\n      \"height\": null,\\r\\n      \"weight\": null,\\r\\n      \"hairColor\": null,\\r\\n      \"eyeColor\": null\\r\\n    },\\r\\n    \"casePartyAddress\": {\\r\\n      \"streetName\": null,\\r\\n      \"city\": null,\\r\\n      \"state\": null,\\r\\n      \"zip\": null\\r\\n    },\\r\\n    \"casePartyIdentification\": [],\\r\\n    \"caseDocuments\": [],\\r\\n    \"minuteOrders\": [],\\r\\n    \"caseFlags\": [],\\r\\n    \"partyInJailFlags\": [],\\r\\n    \"caseBonds\": [],\\r\\n    \"caseWarrants\": [],\\r\\n    \"caseCrossReferenceNumbers\": [],\\r\\n    \"relatedCases\": [],\\r\\n    \"id\": \"5218884\",\\r\\n    \"caseNumber\": \"23FL004253\",\\r\\n    \"style\": \"Lisa  Tam vs Julio  Colucci\",\\r\\n    \"caseCategory\": 2,\\r\\n    \"type\": \"Other Family Law Petitions and Complaints\",\\r\\n    \"typeId\": \"FL130\",\\r\\n    \"fileDate\": \"12/20/2023\",\\r\\n    \"securityGroup\": null,\\r\\n    \"status\": \"Active\",\\r\\n    \"courtLocation\": \"Family\",\\r\\n    \"caseSubType\": null,\\r\\n    \"nodeId\": 21328,\\r\\n    \"permission\": 0,\\r\\n    \"isSecuredAccess\": false,\\r\\n    \"isCriminal\": false\\r\\n  },\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T18:53:12.9354588Z\",\\r\\n  \"message\": \"Case number 5218884 was found\"\\r\\n}'"
+       "'{\\r\\n  \"data\": [\\r\\n    {\\r\\n      \"caseParties\": [],\\r\\n      \"caseAttornies\": [],\\r\\n      \"caseEvents\": [],\\r\\n      \"caseHearings\": [],\\r\\n      \"caseOtherDocuments\": [],\\r\\n      \"caseCharges\": [],\\r\\n      \"caseFinancials\": [],\\r\\n      \"caseFinancialTransactions\": [],\\r\\n      \"caseArrestInfomation\": [],\\r\\n      \"casePartyDemographics\": {\\r\\n        \"race\": null,\\r\\n        \"sex\": null,\\r\\n        \"dateOfBirth\": null,\\r\\n        \"height\": null,\\r\\n        \"weight\": null,\\r\\n        \"hairColor\": null,\\r\\n        \"eyeColor\": null\\r\\n      },\\r\\n      \"casePartyAddress\": {\\r\\n        \"streetName\": null,\\r\\n        \"city\": null,\\r\\n        \"state\": null,\\r\\n        \"zip\": null\\r\\n      },\\r\\n      \"casePartyIdentification\": [],\\r\\n      \"caseDocuments\": [],\\r\\n      \"minuteOrders\": [],\\r\\n      \"caseFlags\": [],\\r\\n      \"partyInJailFlags\": [],\\r\\n      \"caseBonds\": [],\\r\\n      \"caseWarrants\": [],\\r\\n      \"caseCrossReferenceNumbers\": [],\\r\\n      \"relatedCases\": [],\\r\\n      \"id\": \"4692823\",\\r\\n      \"caseNumber\": \"23FL000001\",\\r\\n      \"style\": \"Eric Rivera vs Dayleen Aldridge\",\\r\\n      \"caseCategory\": 2,\\r\\n      \"type\": \"Nullity w/o Minor Children\",\\r\\n      \"typeId\": \"FL60\",\\r\\n      \"fileDate\": \"1/3/2023\",\\r\\n      \"securityGroup\": null,\\r\\n      \"status\": \"Closed/Active\",\\r\\n      \"courtLocation\": \"Family\",\\r\\n      \"caseSubType\": null,\\r\\n      \"nodeId\": 21328,\\r\\n      \"permission\": 0,\\r\\n      \"isSecuredAccess\": false,\\r\\n      \"isCriminal\": false\\r\\n    }\\r\\n  ],\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T19:00:53.4223432Z\",\\r\\n  \"message\": \"Case number 23FL000001 was found\"\\r\\n}'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_event_details(5218884)"
+    "validate_case_number(1,\"FL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FL_MAX = 4253"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\r\\n  \"data\": [\\r\\n    {\\r\\n      \"caseParties\": [],\\r\\n      \"caseAttornies\": [],\\r\\n      \"caseEvents\": [],\\r\\n      \"caseHearings\": [],\\r\\n      \"caseOtherDocuments\": [],\\r\\n      \"caseCharges\": [],\\r\\n      \"caseFinancials\": [],\\r\\n      \"caseFinancialTransactions\": [],\\r\\n      \"caseArrestInfomation\": [],\\r\\n      \"casePartyDemographics\": {\\r\\n        \"race\": null,\\r\\n        \"sex\": null,\\r\\n        \"dateOfBirth\": null,\\r\\n        \"height\": null,\\r\\n        \"weight\": null,\\r\\n        \"hairColor\": null,\\r\\n        \"eyeColor\": null\\r\\n      },\\r\\n      \"casePartyAddress\": {\\r\\n        \"streetName\": null,\\r\\n        \"city\": null,\\r\\n        \"state\": null,\\r\\n        \"zip\": null\\r\\n      },\\r\\n      \"casePartyIdentification\": [],\\r\\n      \"caseDocuments\": [],\\r\\n      \"minuteOrders\": [],\\r\\n      \"caseFlags\": [],\\r\\n      \"partyInJailFlags\": [],\\r\\n      \"caseBonds\": [],\\r\\n      \"caseWarrants\": [],\\r\\n      \"caseCrossReferenceNumbers\": [],\\r\\n      \"relatedCases\": [],\\r\\n      \"id\": \"5218884\",\\r\\n      \"caseNumber\": \"23FL004253\",\\r\\n      \"style\": \"Lisa  Tam vs Julio  Colucci\",\\r\\n      \"caseCategory\": 2,\\r\\n      \"type\": \"Other Family Law Petitions and Complaints\",\\r\\n      \"typeId\": \"FL130\",\\r\\n      \"fileDate\": \"12/20/2023\",\\r\\n      \"securityGroup\": null,\\r\\n      \"status\": \"Active\",\\r\\n      \"courtLocation\": \"Family\",\\r\\n      \"caseSubType\": null,\\r\\n      \"nodeId\": 21328,\\r\\n      \"permission\": 0,\\r\\n      \"isSecuredAccess\": false,\\r\\n      \"isCriminal\": false\\r\\n    }\\r\\n  ],\\r\\n  \"result\": 0,\\r\\n  \"created\": \"2024-03-30T18:49:41.032813Z\",\\r\\n  \"message\": \"Case number 23FL004253 was found\"\\r\\n}'"
+       "{'data': {'caseParties': [{'attorneys': [],\n",
+       "    'casePartyId': '15148230',\n",
+       "    'type': 'Petitioner',\n",
+       "    'firstName': 'Lisa ',\n",
+       "    'middleName': 'Wai Man',\n",
+       "    'lastName': 'Tam',\n",
+       "    'nickName': None,\n",
+       "    'businessName': None,\n",
+       "    'fullName': 'Lisa  Wai Man Tam',\n",
+       "    'isDefendant': False},\n",
+       "   {'attorneys': [],\n",
+       "    'casePartyId': '15148231',\n",
+       "    'type': 'Respondent',\n",
+       "    'firstName': 'Julio ',\n",
+       "    'middleName': 'Cesar',\n",
+       "    'lastName': 'Colucci',\n",
+       "    'nickName': None,\n",
+       "    'businessName': None,\n",
+       "    'fullName': 'Julio  Cesar Colucci',\n",
+       "    'isDefendant': True}],\n",
+       "  'caseAttornies': [],\n",
+       "  'caseEvents': [{'eventId': '119956824',\n",
+       "    'date': '1/16/2024',\n",
+       "    'type': 'Order: Qualified Domestic Relations',\n",
+       "    'filedBy': 'Lisa  Tam, ',\n",
+       "    'comment': 'QDRO re: Google, LLC 401(k)',\n",
+       "    'documentId': '',\n",
+       "    'documents': []},\n",
+       "   {'eventId': '119956825',\n",
+       "    'date': '1/16/2024',\n",
+       "    'type': 'Order: Qualified Domestic Relations',\n",
+       "    'filedBy': 'Lisa  Tam, ',\n",
+       "    'comment': 'QDRO re: State street salary savings program',\n",
+       "    'documentId': '',\n",
+       "    'documents': []},\n",
+       "   {'eventId': '119923832',\n",
+       "    'date': '12/20/2023',\n",
+       "    'type': 'New Filed Case',\n",
+       "    'filedBy': '',\n",
+       "    'comment': None,\n",
+       "    'documentId': '',\n",
+       "    'documents': []},\n",
+       "   {'eventId': '119923850',\n",
+       "    'date': '12/20/2023',\n",
+       "    'type': 'Petition: Family Law Other (Fee Applies)',\n",
+       "    'filedBy': 'Lisa  Tam, ',\n",
+       "    'comment': 'Register Foreign Judgment',\n",
+       "    'documentId': '',\n",
+       "    'documents': []},\n",
+       "   {'eventId': '119923852',\n",
+       "    'date': '12/20/2023',\n",
+       "    'type': 'Other',\n",
+       "    'filedBy': 'Lisa  Tam, ',\n",
+       "    'comment': 'Notice of Registration of Foreign Judgment',\n",
+       "    'documentId': '',\n",
+       "    'documents': []}],\n",
+       "  'caseHearings': [],\n",
+       "  'caseOtherDocuments': [],\n",
+       "  'caseCharges': [],\n",
+       "  'caseFinancials': [],\n",
+       "  'caseFinancialTransactions': [],\n",
+       "  'caseArrestInfomation': [],\n",
+       "  'casePartyDemographics': {'race': None,\n",
+       "   'sex': None,\n",
+       "   'dateOfBirth': None,\n",
+       "   'height': None,\n",
+       "   'weight': None,\n",
+       "   'hairColor': None,\n",
+       "   'eyeColor': None},\n",
+       "  'casePartyAddress': {'streetName': None,\n",
+       "   'city': None,\n",
+       "   'state': None,\n",
+       "   'zip': None},\n",
+       "  'casePartyIdentification': [],\n",
+       "  'caseDocuments': [],\n",
+       "  'minuteOrders': [],\n",
+       "  'caseFlags': [],\n",
+       "  'partyInJailFlags': [],\n",
+       "  'caseBonds': [],\n",
+       "  'caseWarrants': [],\n",
+       "  'caseCrossReferenceNumbers': [],\n",
+       "  'relatedCases': [],\n",
+       "  'id': '5218884',\n",
+       "  'caseNumber': '23FL004253',\n",
+       "  'style': 'Lisa  Tam vs Julio  Colucci',\n",
+       "  'caseCategory': 2,\n",
+       "  'type': 'Other Family Law Petitions and Complaints',\n",
+       "  'typeId': 'FL130',\n",
+       "  'fileDate': '12/20/2023',\n",
+       "  'securityGroup': None,\n",
+       "  'status': 'Active',\n",
+       "  'courtLocation': 'Family',\n",
+       "  'caseSubType': None,\n",
+       "  'nodeId': 21328,\n",
+       "  'permission': 0,\n",
+       "  'isSecuredAccess': False,\n",
+       "  'isCriminal': False},\n",
+       " 'result': 0,\n",
+       " 'created': '2024-03-30T19:00:46.1806578Z',\n",
+       " 'message': 'Case number 5218884 was found'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validate_case_number(4253,\"FL\")"
+    "json.loads(get_event_details(5218884))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DV_MAX = 1069\n",
+    "FL_MAX = 4253"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DV_CASES = list(range(1,DV_MAX+1))\n",
+    "FL_CASES = list(range(1,FL_MAX+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "dv_dict = dict()\n",
+    "fl_dict = dict()\n",
+    "for case in DV_CASES:\n",
+    "    print(case)\n",
+    "    case_json = json.loads(validate_case_number(case,\"DV\"))\n",
+    "    case_id = int(case_json['data'][0]['id'])\n",
+    "    event_json = json.loads(get_event_details(case_id))\n",
+    "    dv_dict[case] = {\n",
+    "        'case': case_json,\n",
+    "        'event': event_json\n",
+    "    }\n",
+    "    time.sleep(2)\n",
+    "for case in DV_CASES:\n",
+    "    print(case)\n",
+    "    case_json = json.loads(validate_case_number(case,\"FL\"))\n",
+    "    case_id = int(case_json['data'][0]['id'])\n",
+    "    event_json = json.loads(get_event_details(case_id))\n",
+    "    fl_dict[case] = {\n",
+    "        'case': case_json,\n",
+    "        'event': event_json\n",
+    "    }\n",
+    "    time.sleep(2)\n",
+    "dictionary = {\n",
+    "    'FL': fl_dict,\n",
+    "    'DV': dv_dict\n",
+    "}\n",
+    "# Serializing json\n",
+    "json_object = json.dumps(dictionary, indent=4)\n",
+    " \n",
+    "# Writing to sample.json\n",
+    "with open(\"sample.json\", \"w\") as outfile:\n",
+    "    outfile.write(json_object)"
    ]
   },
   {
@@ -104,9 +311,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "FL_MAX = 4253"
-   ]
+   "source": []
   }
  ],
  "metadata": {
