--- a/processing.ipynb
+++ b/processing.ipynb
@@ -382,6 +382,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'attorneys': [], 'casePartyId': '13903070', 'type': 'Petitioner', 'firstName': 'Resi', 'middleName': 'B', 'lastName': 'Gerstner', 'nickName': None, 'businessName': None, 'fullName': 'Resi B Gerstner', 'isDefendant': False}, {'attorneys': [], 'casePartyId': '15250334', 'type': 'Petitioner', 'firstName': 'Resi', 'middleName': '', 'lastName': 'Gerstner', 'nickName': None, 'businessName': None, 'fullName': 'Resi Gerstner', 'isDefendant': False}]\n",
+      "[{'attorneys': [], 'casePartyId': '13903071', 'type': 'Respondent', 'firstName': 'Troy', 'middleName': 'R', 'lastName': 'Doolittle', 'nickName': None, 'businessName': None, 'fullName': 'Troy R Doolittle', 'isDefendant': True}, {'attorneys': [], 'casePartyId': '15250335', 'type': 'Respondent', 'firstName': 'Troy', 'middleName': '', 'lastName': 'Doolittle', 'nickName': None, 'businessName': None, 'fullName': 'Troy Doolittle', 'isDefendant': True}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "petitioners = []\n",
+    "respondents = []\n",
+    "for party in case_object[\"event\"][\"data\"][\"caseParties\"]:\n",
+    "    if party[\"type\"] == \"Petitioner\":\n",
+    "        petitioners.append(party)\n",
+    "    if party[\"type\"] == \"Respondent\":\n",
+    "        respondents.append(party)\n",
+    "print(petitioners)\n",
+    "print(respondents)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
