Corrected case_id

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -68,43 +68,49 @@
        "      <th>petitioner_rep</th>\n",
        "      <th>respondent_rep</th>\n",
        "      <th>restraining_order_terms</th>\n",
+       "      <th>relevant_comments</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>FL_2</td>\n",
+       "      <td>23FL000002</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>FL_4</td>\n",
+       "      <td>23FL000004</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>FL_6</td>\n",
+       "      <td>23FL000006</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>FL_8</td>\n",
+       "      <td>23FL000008</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>FL_9</td>\n",
+       "      <td>23FL000009</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,65 +118,84 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3706</th>\n",
-       "      <td>FL_4245</td>\n",
+       "      <td>23FL004245</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3707</th>\n",
-       "      <td>FL_4246</td>\n",
+       "      <td>23FL004246</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3708</th>\n",
-       "      <td>FL_4250</td>\n",
+       "      <td>23FL004250</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3709</th>\n",
-       "      <td>FL_4252</td>\n",
+       "      <td>23FL004252</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3710</th>\n",
-       "      <td>FL_4253</td>\n",
+       "      <td>23FL004253</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3711 rows × 4 columns</p>\n",
+       "<p>3711 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      case_id  petitioner_rep  respondent_rep  restraining_order_terms\n",
-       "0        FL_2            True            True                        0\n",
-       "1        FL_4           False           False                        0\n",
-       "2        FL_6           False           False                        0\n",
-       "3        FL_8           False           False                        0\n",
-       "4        FL_9           False           False                        0\n",
-       "...       ...             ...             ...                      ...\n",
-       "3706  FL_4245           False           False                        0\n",
-       "3707  FL_4246            True           False                        0\n",
-       "3708  FL_4250           False           False                        0\n",
-       "3709  FL_4252            True           False                        0\n",
-       "3710  FL_4253           False           False                        0\n",
+       "         case_id  petitioner_rep  respondent_rep  restraining_order_terms  \\\n",
+       "0     23FL000002            True            True                    False   \n",
+       "1     23FL000004           False           False                    False   \n",
+       "2     23FL000006           False           False                    False   \n",
+       "3     23FL000008           False           False                    False   \n",
+       "4     23FL000009           False           False                    False   \n",
+       "...          ...             ...             ...                      ...   \n",
+       "3706  23FL004245           False           False                    False   \n",
+       "3707  23FL004246            True           False                    False   \n",
+       "3708  23FL004250           False           False                    False   \n",
+       "3709  23FL004252            True           False                    False   \n",
+       "3710  23FL004253           False           False                    False   \n",
        "\n",
-       "[3711 rows x 4 columns]"
+       "     relevant_comments  \n",
+       "0                       \n",
+       "1                       \n",
+       "2                       \n",
+       "3                       \n",
+       "4                       \n",
+       "...                ...  \n",
+       "3706                    \n",
+       "3707                    \n",
+       "3708                    \n",
+       "3709                    \n",
+       "3710                    \n",
+       "\n",
+       "[3711 rows x 5 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,12 +204,13 @@
     "fl_data = dataset[\"FL\"]\n",
     "processed = []\n",
     "\n",
-    "def make_entry(case_id, petitioner_rep, respondent_rep, restraining_order_terms):\n",
+    "def make_entry(case_id, petitioner_rep, respondent_rep, restraining_order_terms, relevant_comments):\n",
     "    return {\n",
     "        \"case_id\": case_id,\n",
     "        \"petitioner_rep\": petitioner_rep, \n",
     "        \"respondent_rep\": respondent_rep,\n",
     "        \"restraining_order_terms\": restraining_order_terms,\n",
+    "        \"relevant_comments\": relevant_comments\n",
     "        }\n",
     "\n",
     "restraining_order_terms = [\"RESTRAINING\",\"ORDER\",\"ROAH\",\"DV-130\"]\n",
@@ -196,8 +222,8 @@
     "        return 0\n",
     "    \n",
     "for idx,case in enumerate(fl_data):\n",
-    "    case_id = f\"FL_{case}\"\n",
     "    case_object = fl_data[case]\n",
+    "    case_id = case_object[\"case\"][\"data\"][0][\"caseNumber\"]\n",
     "    petitioners = []\n",
     "    respondents = []\n",
     "    for party in case_object[\"event\"][\"data\"][\"caseParties\"]:\n",
@@ -215,25 +241,39 @@
     "    for attorney in case_object[\"event\"][\"data\"]['caseAttornies']:\n",
     "        representing = attorney[\"representing\"]\n",
     "        attornies[representing] = attorney\n",
-    "    occured = 0\n",
+    "    ro_occured = False\n",
+    "    relevant_comments = []\n",
     "    for event in case_object[\"event\"][\"data\"][\"caseEvents\"]:\n",
     "        comm = event[\"comment\"]\n",
     "        comm = comm if comm is not None else \"\"\n",
     "        comm = comm.upper()\n",
     "        occurences = [count_occurences(comm, term.upper()) for term in restraining_order_terms]\n",
-    "        occured += (sum(occurences) != 0)\n",
+    "        if not ro_occured and sum(occurences) != 0:\n",
+    "            ro_occured = True\n",
+    "        if sum(occurences) != 0:\n",
+    "            relevant_comments.append(comm)\n",
     "    respondent_attorney = respondent_full_name in attornies\n",
     "    petitioner_attorney = petitioner_full_name in attornies\n",
     "\n",
+    "    #Post Processing\n",
+    "    relevant_comments = \"\\n\".join(relevant_comments)\n",
     "\n",
-    "    processed.append(make_entry(case_id,petitioner_attorney,respondent_attorney,occured))\n",
+    "\n",
+    "    processed.append(make_entry(case_id,petitioner_attorney,respondent_attorney,ro_occured,relevant_comments))\n",
     "dataframe = pd.DataFrame(processed)\n",
     "dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
